# service-mcp-server

./: TESTING.md  pyproject.toml
app/: __init__.py  config.py  health.py
app/services/: __init__.py  asset.py  asset_model.py  realm.py  rule.py
app/utils/: __init__.py  asset_attribute_model.py
services/: __init__.py  openremote_service.py
tests/: __init__.py  conftest.py  test_infrastructure.py  test_integration.py
tests/mcp-server/: __init__.py  conftest.py  test_access_control.py  test_server_config.py  test_server_health.py  test_services_asset.py  test_services_asset_model.py  test_services_realm.py  test_services_rule.py
tests/shared/: __init__.py  test_mcp_client.py  test_openremote_service.py
